--- a/index.html
+++ b/index.html
@@ -5,8 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praktika</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    
+    <main class="main-content">
+        <div class="column">
+            <div class="image-container">
+                <p class="number one">1</p>
+                <img class="icon rocket" src="./icon_discover.svg" alt="Raketa">
+            </div>
+            <h1>Discover</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        </div>
+
+        <div class="column">
+            <div class="image-container">
+                <p class="number one">1</p>
+                <img class="icon rocket" src="./icon_discover.svg" alt="Discover">
+            </div>
+            <h1>Discover</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        </div>
+
+        <div class="column">
+            <div class="image-container">
+                <p class="number one">1</p>
+                <img class="icon rocket" src="./icon_discover.svg" alt="Raketa">
+            </div>
+            <h1>Discover</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        </div>
+
+        <div class="column">
+            <div class="image-container">
+                <p class="number one">1</p>
+                <img class="icon rocket" src="./icon_discover.svg" alt="Raketa">
+            </div>
+            <h1>Discover</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+        </div>
+    </main>
 </body>
 </html>
