--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Praktika</title>
+    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">">
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
@@ -12,36 +15,44 @@
         <div class="column">
             <div class="image-container">
                 <p class="number one">1</p>
-                <img class="icon rocket" src="./icon_discover.svg" alt="Raketa">
+            <div class="icon discover-home">
+                <img class="discover" src="./icon_discover.svg" alt="Raketa">
             </div>
-            <h1>Discover</h1>
+        </div>
+            <h2 class="title">Discover</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
 
         <div class="column">
             <div class="image-container">
-                <p class="number one">1</p>
-                <img class="icon rocket" src="./icon_discover.svg" alt="Discover">
-            </div>
-            <h1>Discover</h1>
+                <p class="number two">2</p>
+                <div class="icon mind-home">
+                     <img class="mind" src="./icon_mind.svg" alt="Mind">
+                </div>
+        </div>
+            <h2 class="title">Design</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
 
         <div class="column">
             <div class="image-container">
-                <p class="number one">1</p>
-                <img class="icon rocket" src="./icon_discover.svg" alt="Raketa">
+                <p class="number three">3</p>
+                <div class="icon user-home">
+                    <img class="user" src="./icon_user.svg" alt="User">
+                </div>
             </div>
-            <h1>Discover</h1>
+            <h2 class="title">Develop</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
 
         <div class="column">
             <div class="image-container">
-                <p class="number one">1</p>
-                <img class="icon rocket" src="./icon_discover.svg" alt="Raketa">
+                <p class="number four">4</p>
+                <div class="icon deploy-home">
+                    <img class="deploy" src="./icon_deploy.svg" alt="Deploy">
+                </div>
             </div>
-            <h1>Discover</h1>
+            <h2 class="title">Deploy</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
         </div>
     </main>
